# arrow-ballista

./: .dockerignore  .gitignore  docker-compose.yml  executor.Dockerfile  scheduler.Dockerfile  sqlline.Dockerfile
.circleci/: config.yml
.github/workflows/: rust.yml
ballista-cli/: Cargo.toml
ballista-cli/src/: context.rs  exec.rs  main.rs
ballista/client/: Cargo.toml
ballista/client/src/: context.rs
ballista/core/: Cargo.toml
ballista/core/proto/: datafusion.proto
ballista/core/src/: client.rs  config.rs  utils.rs
ballista/core/src/serde/: mod.rs
ballista/executor/: Cargo.toml
ballista/executor/src/: executor_server.rs  main.rs  standalone.rs
ballista/rust/client/: Cargo.toml
ballista/rust/client/src/: columnar_batch.rs  context.rs
ballista/rust/client/testdata/delta-table/: .part-00006-31f1c2eb-e591-49b2-b150-d355cde4cb45-c000.snappy.parquet.crc  .part-00007-2974cc84-1653-46f3-993c-fbc1cf6e232a-c000.snappy.parquet.crc  part-00006-31f1c2eb-e591-49b2-b150-d355cde4cb45-c000.snappy.parquet  part-00007-2974cc84-1653-46f3-993c-fbc1cf6e232a-c000.snappy.parquet
ballista/rust/client/testdata/delta-table/_delta_log/: .00000000000000000000.json.crc
ballista/rust/core/: Cargo.toml  build.rs
ballista/rust/executor/: Cargo.toml
ballista/rust/scheduler/: Cargo.toml
ballista/scheduler/: Cargo.toml
ballista/scheduler/src/: display.rs  flight_sql.rs  main.rs  standalone.rs
benchmarks/: Cargo.toml
dev/docker/: ballista-executor.Dockerfile  ballista-scheduler.Dockerfile
examples/: Cargo.toml
examples/examples/: standalone-sql.rs
examples/tls/: my_ca.key  my_ca.pem  server.csr  server.key  server.pem
helm/ballista/: Chart.yaml  values.yaml
helm/ballista/templates/: NOTES.txt  deployment.yaml  executor.yaml  ingress.yaml  scheduler.yaml  service.yaml
python/: Cargo.toml
scripts/: run_dev_cluster.sh
(+40 files in other folders)
