# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista"
description = "Ballista Distributed Compute"
license = "Apache-2.0"
version = "0.7.0"
homepage = "https://github.com/apache/arrow-ballista"
repository = "https://github.com/apache/arrow-ballista"
readme = "README.md"
authors = ["Apache Arrow <dev@arrow.apache.org>"]
edition = "2021"
rust-version = "1.59"

[dependencies]
ballista-core = { path = "../core" }
ballista-executor = { path = "../executor", optional = true }
ballista-scheduler = { path = "../scheduler", optional = true }
datafusion = { rev = "36f9e45efa66ed048dc3f671e3d0c4a09abb849e", git = "https://github.com/spaceandtimelabs/arrow-datafusion.git" }
datafusion-proto = { rev = "36f9e45efa66ed048dc3f671e3d0c4a09abb849e", git = "https://github.com/spaceandtimelabs/arrow-datafusion.git" }
futures = "0.3"
log = "0.4"
parking_lot = "0.12"
sqlparser = "0.21.0"
tempfile = "3"
tokio = "1.0"

[features]
default = []
standalone = ["ballista-executor", "ballista-scheduler"]
